syntax = "proto3";
package kinesisbutler;

import "google/protobuf/empty.proto";

service ConsumerService {
  rpc GetRecords(GetRecordsRequest) returns (stream GetRecordsResponse);
  rpc Initialize(InitializeRequest) returns (google.protobuf.Empty);
  rpc Shutdown(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc CheckpointLease(CheckpointLeaseRequest) returns (google.protobuf.Empty);
}

message GetRecordsRequest {
  string app_name = 1;
  repeated string streams = 2;
}

message GetRecordsResponse {
  repeated DataRecord records = 1;
}

message InitializeRequest {
  string app_name = 1;
  repeated string streams = 2;
}

message CheckpointLeaseRequest {
  Lease lease = 1;
  string sequence_number = 2;
}

message Lease {
  string stream_name = 1;
  string shard_id = 2;
  string consumer_arn = 3;
  string app_name = 4;
  string instance_id = 5;
}

message DataRecord {
  string sequence_number = 1;
  string timestamp = 2;
  string partition_key = 3;
  string encryption_type = 4;
  bytes data = 5;
  Lease lease = 6;
}
